--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.12.1",
     "gatsby-plugin-feed": "^4.12.1",
     "gatsby-plugin-gatsby-cloud": "^4.12.1",
